--- a/public/assests/css/style.css
+++ b/public/assests/css/style.css
@@ -1231,12 +1231,12 @@ h2 {
 }
 
 .product-detail .product-content .quantity input {
-    width: 40px;
-    height: 30px;
-    color: #ffffff;
+    width: 120px;
+    height: 40px;
+    color: black;
     font-size: 16px;
     text-align: center;
-    background: #000000;
+    background: white;
     border: none;
 }
 
